# flask-expenses-manager

./: .dockerignore  .env.dev.example  .env.prod.example  .flake8  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  Dockerfile  Dockerfile.prod  README.md  TASKS.md  ai_integration-claude.md  ai_integration-codex.md  ai_integration-gemini.md  buildspec.yml  docker-compose.aws.logging.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  graphql.introspection.json  graphql.operations.manifest.json  openapi.json  package-lock.json  package.json  product.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_without_db.py  schema.graphql  sonar-project.properties  steering.md  (+2 more)
.claude/: settings.json
.context/: 01_sources_of_truth.md  02_sdd_workflow.md  03_agentic_workflow.md  04_architecture_snapshot.md  05_quality_and_gates.md  06_context_backlog.md  07_operational_cycle.md  README.md  quality_gates.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.tmp-bin/: python3.13
.zap/: rules.tsv
ai_squad/: AGENT_ARCHITECTURE.md  README.md  main.py  requirements.txt
api-tests/: README.md
app/: README.md  __init__.py  models.py  routes.py
config/: README.md  __init__.py  github_master_ruleset.json  http_latency_budgets.json  security_exception_allowlist.json  settings.py
deploy/: README.md
docs/: API_DOCUMENTATION.md  API_RESPONSE_CONTRACT.md  AUDIT_TRAIL_RUNBOOK.md  AWS_COST_GUARDRAILS.md  AWS_S1_COMMANDS.md  CD_AUTOMATION_EXECUTION_PLAN.md  CI_CD.md  CI_SECURITY_RESILIENCE_PLAN.md  CLOUD_DEPLOYMENT_ANALYSIS.md  CLOUD_SECRETS_RUNBOOK.md  DEPLOYMENT_ENVIRONMENTS.md  FEEDBACK_BLOCO_CI_SECURITY_HARDENING-2026-02-11.md  INCIDENT_REPORT_CI_DEPLOY_2026-02-20.md  NGINX_AWS_TLS.md  NOMENCLATURE.md  OWASP_S3_BASELINE.md  OWASP_S3_CHECKLIST.md  OWASP_S3_INVENTORY.md  OWASP_S3_REMEDIATION_PLAN.md  PHASE0_IMPLEMENTATION_LOG.md  PHASE0_RESPONSE_ADOPTION_PLAN.md  PLANO_TAREFAS_POR_AREA.md  PLT3-versioning-foundation.md  PROFILE_V1_SPEC.md  RATE_LIMIT_REDIS_RUNBOOK.md  RDS_PLAN_B.md  RUNBOOK.md  SECURITY_GAP_TASK_MAP_2026-02-11.md  SECURITY_STATUS_REPORT_2026-02-13.md  STABILIZATION_01_TRACEABILITY.md  TESTING.md  THREAT_MODEL_STRIDE.md  api-contract.md  entitlement-matrix.md  mypy-migration.md
load-tests/: baseline.json  smoke-auth.js  smoke-dashboard.js  smoke-transactions.js
scripts/: README.md  __init__.py  alembic_single_head_check.py  aws_ai_insights_job.py  aws_api_observability_obs2.py  aws_apply_logging_overlay_i7.py  aws_backups_s3.py  aws_cloudwatch_agent.py  aws_cloudwatch_logs_i7.py  aws_cost_guardrails_i5.py  aws_deploy_i6.py  aws_dev_recovery_i17.py  aws_encrypt_root_volume.py  aws_eventbridge_sns_alerts.py  aws_fix_dev_deploy_role.py  aws_iam_audit_i8.py  aws_observability_i7.py  aws_patching_s1.py  aws_recurrence_job.py  aws_route53_healthchecks_i7.py  aws_runtime_defaults.py  aws_s1_hardening.py  aws_tls_renew_i15.py  aws_ufw_i8.py  aws_validate_i16.py  backup-db-to-s3.sh  bootstrap_local_env.sh  build_postman_collection.py  check-openapi-drift.sh  check_migration_patterns.py  check_tools_registry_parity.py  ci_failure_summary.py  ci_image_artifact.sh  ci_stack_bootstrap.py  ci_suite_canary.py  ci_suite_doctor.py  controller_response_contract_check.py  cosmic_ray.toml  ensure_tls_runtime.sh  entitlement_coverage_check.py  (+45 more)
smoke_tests/: auraxis_smoke.postman_collection.json  auraxis_smoke.postman_environment.json  run_smoke.sh
terraform/: README.md  dns.tf  import.tf  main.tf  outputs.tf  security.tf  variables.tf  web.tf
tests/: README.md  conftest.py  helpers.py  test_account_deletion.py  test_admin_feature_flags.py  test_advisory.py  test_ai_advisory_service.py  test_ai_daily_rate_limit.py  test_ai_insight_audit_preview.py  test_ai_insight_cost_and_limits.py  test_ai_insight_dossier_cli.py  test_ai_insight_feedback.py  test_ai_insight_goals_budget_context.py  test_ai_insight_graphql.py  test_ai_insight_model.py  test_ai_insight_observability.py  test_ai_insight_persistence.py  test_ai_insight_run_model.py  test_ai_insight_weekly_recap.py  test_ai_monthly_recap_batch.py  test_ai_monthly_report_service.py  test_ai_weekly_insights_cli.py  test_alert_contract.py  test_alert_service.py  test_analysis_ready_notification.py  test_api23_prometheus_metrics.py  test_audit_event_service.py  test_audit_log_destructive_ops.py  test_auth.py  (+193 more)
(+643 files in other folders)
