[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["B", "C90", "E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "migrations",
    "tests",
]
strict = true
plugins = []
disallow_subclassing_any = false

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
