[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["B", "C90", "E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# HTML email templates contain long inline styles — line-length not applicable
"app/services/email_templates/*.py" = ["E501"]
# Deploy scripts embed shell commands in Python strings — line-length not applicable
"scripts/aws_deploy_i6.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "migrations",
    "tests",
]
strict = true
plugins = []
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "app.schemas.*",
    "app.middleware.security_headers",
    "app.middleware.cors",
    "app.http.request_context",
    "app.middleware.docs_access",
    "app.controllers.health_controller",
    "app.controllers.subscription_controller",
    "app.controllers.shared_entries.resources",
    "app.controllers.fiscal.resources",
    "app.controllers.wallet.valuation_resources",
    "app.controllers.wallet.operation_resources",
    "app.controllers.wallet.entry_resources",
    "app.controllers.auth.error_handlers",
    "app.extensions.integration_metrics_cli",
    "app.extensions.audit_retention_cli",
    "app.extensions.jwt_callbacks",
    "app.extensions.audit_trail",
    "app.extensions.http_observability",
    "app.extensions.error_handlers",
    "app.extensions.prometheus_metrics",
    "app.controllers.observability_controller",
]
disable_error_code = ["untyped-decorator"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
